--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ matplotlib = "==3.3.3"
 scikit-learn = "==0.23.2"
 django = "~=3.1.0"
 tqdm = "4.59.0"
+django-cleanup = "==5.2.0"
 
 [dev-packages]
 
